--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.116.87.97:8081/repository/tesla-web-releases/</url>
+	      <url>http://http://18.218.26.73:8081/repository/tesla-web-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository</name>
-              <url>http://18.116.87.97:8081/repository/tesla-webapp-snapshots/</url>
+              <url>http://http://18.218.26.73:8081/repository/tesla-webapp-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
